# miccai23

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker_quantconn  docker_quantconn.yml  test.yml
quantconn/: cli.py  constants.py  download.py  evaluate.py  process.py  utils.py  viz.py
quantconn/commands/: download.py  evaluate.py  process.py
quantconn/data/: README.md
quantconn_docker/: Dockerfile  docker-build.sh  docker-push.sh
