[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "quantconn"
description = "MICCAI 23 Challenge Tools for Quantitative Connectivity through Harmonized Preprocessing of Diffusion competition"
readme = "README.md"
requires-python = ">=3.8"
license = { text="MIT" }
authors = [
  { name="Serge Koudoro", email="dipy@python.org" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "dipy>=1.7.0",
  "click>=8.0.1",
  "requests>=2.26.0",
  "bs4",
  ]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/dipy/miccai23"

[project.scripts]
quantconn = "quantconn.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "quantconn/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["quantconn"]
