[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "quantconn"
description = "MICCAI 23 Challenge Tools for Quantitative Connectivity through Harmonized Preprocessing of Diffusion competition"
readme = "README.md"
requires-python = ">=3.8"
license = { text="MIT" }
authors = [
  { name="Serge Koudoro", email="dipy@python.org" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "dipy>=1.7.0",
  #"dipy@git+https://git@github.com/arokem/dipy@11a94c0fcf9b3",
  "typer[all]>=0.9.0",
  "requests>=2.26.0",
  "scipy",
  "bs4",
  "matplotlib",
  "HD-BET@git+https://github.com/MIC-DKFZ/HD-BET.git",
  "networkx",
  "pingouin==0.5.3",
  "pandas==1.5.2",
  "bctpy==0.6.1",
  ]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/dipy/miccai23"

[project.scripts]
quantconn = "quantconn.cli:app"

[project.optional-dependencies]
all = ["quantconn[style, test, typing]"]
style = ["flake8", "blue", "isort", "pre-commit"]
typing = ["mypy", "types-Pillow", "data-science-types"]
test = [
    "coverage",
    "pytest !=5.3.4",
    "pytest-cov",
    "pytest-doctestplus",
    ]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "quantconn/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["quantconn"]

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
version_scheme = "release-branch-semver"

[tool.hatch.metadata]
allow-direct-references = true
